internal/gatewayapi/testdata/backend-invalid-feature-disabled.in.yaml
gateways:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-1
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: http
          protocol: HTTP
          port: 80
          allowedRoutes:
            namespaces:
              from: All
httpRoutes:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      namespace: default
      name: httproute-1
    spec:
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-1
          sectionName: http
      rules:
        - matches:
            - path:
                value: "/1"
          backendRefs:
            - group: gateway.envoyproxy.io
              kind: Backend
              name: backend-ip
backends:
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: Backend
    metadata:
      name: backend-ip
      namespace: default
    spec:
      endpoints:
        - ipv4:
            address: 1.1.1.1
            port: 3001
envoyExtensionPolicies:
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: EnvoyExtensionPolicy
    metadata:
      namespace: default
      name: envoy-gateway
    spec:
      targetRef:
        group: gateway.networking.k8s.io
        kind: HTTPRoute
        name: httproute-1
      extProc:
        - backendRefs:
            - group: gateway.envoyproxy.io
              kind: Backend
              name: backend-ip
